fixed vertical alignment of spinners, and reduced the space between them

--- a/networkPlayer.css
+++ b/networkPlayer.css
@@ -92,3 +92,7 @@ div.ui-selectmenu-open, #fwStrategy-menu, #aLogic-menu {
 	color: white !important;
 	background: green !important;
 }
+
+#trafficBusyIndicator, #rtLogBusyIndicator {
+	margin-bottom: 2px;
+}
